# TLE-gf

./: CLAUDE.md  pyproject.toml
docs/: minigames-extraction-assessment.md
extra/: fonts.conf
tests/: _migrate_fakes.py  betting_test_utils.py  conftest.py  minigames_test_utils.py  starboard_test_utils.py  test_akari_rating.py  test_betting.py  test_betting_cmd_wallet.py  test_betting_commands.py  test_betting_force_bet.py  test_betting_rank_ties.py  test_cf_ratelimit.py  test_channel_gate.py  test_duel_ranklist_ties.py  test_greatday.py  test_greatday_backfill.py  test_greatday_leaderboard.py  test_handles_leaderboards.py  test_migrate_async.py  test_migrations.py  test_migrations_versions.py  test_minigames.py  test_minigames_akari_nonpro.py  test_minigames_cog_ingest.py  test_minigames_queens_cmds_admin.py  test_minigames_queens_cmds_register.py  test_minigames_queens_cmds_results.py  test_minigames_queens_import.py  test_minigames_queens_optout.py  test_minigames_winner_ties.py  test_odds_quota.py  test_ranking.py  test_rated_vc.py  test_ratedvc_ranklist_ties.py  test_starboard_args.py  test_starboard_build.py  test_starboard_cog.py  test_starboard_db.py  test_starboard_db_aliases.py  test_starboard_edge_cases.py  (+5 more)
tle/: __main__.py  constants.py
tle/cogs/: _betting_commands.py  _betting_engine.py  _betting_format.py  _betting_helpers.py  _betting_wallet_cmds.py  _channel_gate_helpers.py  _codeforces_gitgud.py  _contests_ratedvc.py  _duel_impl.py  _handles_gudgitters.py  _handles_rankup.py  _lockout_impl.py  _mgcmds_akari.py  _mgcmds_akarislash.py  _mgimpl_core.py  (+33 more)
(+18 files in other folders)
