[tool.poetry]
name = "TLE"
version = "0.2.0"
description = ""
authors = ["meooow25 <soumiksarkar.3120@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
"discord.py" = "^2.1.1"
seaborn = "^0.13.0"
lxml = "^4.6"
pillow = "^9.0"
pycairo = "^1.19.1"
PyGObject = "^3.34.0"
aiocache = "^0.11.1"
aiohttp = "^3.10"
matplotlib = "^3.8"
numpy = "^1.26"
pandas = "^2.1"
cycler = "^0.12"
playwright = "^1.40"

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<9"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
